5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1593_1804.log
== TEST (2019-03-28 10:50:49) 
-- CODE:
cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = sqrt((cBx - cAx) + (cBy - cBx))

r = round(dAB, 3)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dAB = sqrt((cBx - cAx) + (cBy - cBx))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:51:56) 
-- CODE:
cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2)

r = round(dAB, 3)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dAB = sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:55:04) 
-- CODE:
cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = sqrt((cBx - cAx) ** 2 + (cBy - cAY) ** 2)

r = round(dAB, 3)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dAB = sqrt((cBx - cAx) ** 2 + (cBy - cAY) ** 2)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:55:29) 
-- CODE:
cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2)

r = round(dAB, 3)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dAB = sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:56:25) 
-- CODE:
cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = float(sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2))

r = round(dAB, 3)

print(r)
-- EXECUTION TIME:
0.137416
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1804/main.py", line 6, in <module>
    dAB = float(sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:56:44) 
-- CODE:
cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = float(input(sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2)))

r = round(dAB, 3)

print(r)
-- EXECUTION TIME:
0.12247
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1804/main.py", line 6, in <module>
    dAB = float(input(sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2)))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:57:08) 
-- CODE:
cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = float((sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2)))

r = round(dAB, 3)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dAB = float((sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2)))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:57:25) 
-- CODE:
cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = float((sqrt((cBx - cAx)** 2 + (cBy - cAy)** 2)))

r = round(dAB, 3)

print(r)
-- EXECUTION TIME:
0.206036
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1804/main.py", line 6, in <module>
    dAB = float((sqrt((cBx - cAx)** 2 + (cBy - cAy)** 2)))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:57:31) 
-- CODE:
cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = float((sqrt((cBx - cAx)**2 + (cBy - cAy)**2)))

r = round(dAB, 3)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dAB = float((sqrt((cBx - cAx)**2 + (cBy - cAy)**2)))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:57:33) 
-- CODE:
cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = float((sqrt((cBx - cAx)**2 + (cBy - cAy)**2)))

r = round(dAB, 3)

print(r)
-- EXECUTION TIME:
0.223399
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1804/main.py", line 6, in <module>
    dAB = float((sqrt((cBx - cAx)**2 + (cBy - cAy)**2)))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:57:59) 
-- CODE:
cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = float(sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2))

r = round(dAB, 3)

print(r)
-- EXECUTION TIME:
0.180818
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1804/main.py", line 6, in <module>
    dAB = float(sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:58:18) 
-- CODE:
cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2)

r = round(dAB, 3)

print(r)
-- EXECUTION TIME:
0.136637
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1804/main.py", line 6, in <module>
    dAB = sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2)
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:58:46) 
-- CODE:
cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2)

r = round(dAB, 3)

print(r)
-- EXECUTION TIME:
0.14417
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1804/main.py", line 6, in <module>
    dAB = sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2)
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:58:48) 
-- CODE:
cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2)

r = round(dAB, 3)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dAB = sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:59:44) 
-- CODE:
from sqrt import *
cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2)

r = round(dAB, 3)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from sqrt import *
ModuleNotFoundError: No module named 'sqrt'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:59:51) 
-- CODE:
from sqrt import *

cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2)

r = round(dAB, 3)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from sqrt import *
ModuleNotFoundError: No module named 'sqrt'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:00:25) 
-- CODE:
from sqrt import *

cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = sqrt(cBx - cAx) ** 2 + (cBy - cAy) ** 2

r = round(dAB, 3)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from sqrt import *
ModuleNotFoundError: No module named 'sqrt'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:00:36) 
-- CODE:

cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = sqrt(cBx - cAx) ** 2 + (cBy - cAy) ** 2

r = round(dAB, 3)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dAB = sqrt(cBx - cAx) ** 2 + (cBy - cAy) ** 2
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:01:32) 
-- CODE:
from math import *
cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = sqrt(cBx - cAx) ** 2 + (cBy - cAy) ** 2

r = round(dAB, 3)

print(r)
-- EXECUTION TIME:
0.240572
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1804/main.py", line 7, in <module>
    dAB = sqrt(cBx - cAx) ** 2 + (cBy - cAy) ** 2
ValueError: math domain error

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:01:38) 
-- CODE:
from math import *

cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = sqrt(cBx - cAx) ** 2 + (cBy - cAy) ** 2

r = round(dAB, 3)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    dAB = sqrt(cBx - cAx) ** 2 + (cBy - cAy) ** 2
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:02:28) 
-- CODE:
from math import *

cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = float(sqrt(cBx - cAx) ** 2 + (cBy - cAy) ** 2)

r = round(dAB, 3)

print(r)
-- EXECUTION TIME:
0.134746
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1804/main.py", line 8, in <module>
    dAB = float(sqrt(cBx - cAx) ** 2 + (cBy - cAy) ** 2)
ValueError: math domain error

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:02:31) 
-- CODE:
from math import *

cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = float(sqrt(cBx - cAx) ** 2 + (cBy - cAy) ** 2)

r = round(dAB, 3)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    dAB = float(sqrt(cBx - cAx) ** 2 + (cBy - cAy) ** 2)
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:04:08) 
-- CODE:
from math import *

cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = float(sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2))

r = round(dAB, 3)

print(r)
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:04:23) 
-- CODE:
from math import *

cAx = float(input("valor: "))
cAy = float(input("valor: "))
cBx = float(input("valor: "))
cBy = float(input("valor: "))

dAB = float(sqrt((cBx - cAx) ** 2 + (cBy - cAy) ** 2))

r = round(dAB, 3)

print(r)
-- EXECUTION TIME:
0.167037
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
